Sandbox/07-02-2025/force-app/main/default/objects/Advertiser_Mapping__c/Advertiser_Mapping__c.object-meta.xml
<CustomObject>
    <label>Advertiser Mapping</label>
    <nameField>
        <displayFormat>AM -{0000000000}</displayFormat>
        <label>Advertiser Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertiser Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>