Sandbox/07-02-2025/force-app/main/default/objects/Advertiser_Mapping__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <formula>Advertiser_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser</label>
    <type>Text</type>
</CustomField>