Sandbox/07-02-2025/force-app/main/default/objects/Advertiser_Mapping__c/fields/Advertiser_Error__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Error__c</fullName>
    <label>Advertiser Error</label>
    <length>250</length>
    <type>Text</type>
</CustomField>