Sandbox/07-02-2025/force-app/main/default/objects/Advertiser_Mapping__c/fields/Advertiser_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Sector_1__c</fullName>
    <formula>Advertiser_Account__r.Advertiser_Sector_1_For_Adv_Mappings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Sector 1</label>
    <type>Text</type>
</CustomField>